welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:46: error: not found: value reculer
  reculer(getMondeHauteur())
  ^